# Connectives

./: .coverage  .gitattributes  .gitignore  =3.0.0  AI_WORKFLOW.md  CLAUDE.md  FINAL_ANSWER.md  README.md  RESULTS.md  RESULTS_SUMMARY.md  USAGE.md  pyproject.toml
.claude/agents/: agent-registry.json
.claude/commands/: debug.md  document.md  plan-from-template.md  plan.md  revise.md  setup.md
.claude/metrics/: 2025-10.jsonl
.claude/tts/: tts-config.sh
docs/: CLAUDE_CODE.md  CONTRIBUTING.md  DEFINABILITY.md  GITHUB.md  INSTALLATION.md  JUPYTER.md  README.md  RESULTS.md  TESTING.md  USAGE.md
examples/: README.md  binary_only_search.txt  depth_results.csv  incremental_search.txt  incremental_search_summary.txt  validation.txt  z3_nice_set_17.md  z3_nice_set_29.md  z3_nice_set_30.md  z3_nice_set_31.md  z3_nice_set_32.md  z3_nice_set_33.md  z3_nice_set_34.md  z3_nice_set_35.md  z3_unary_binary_max5.md
examples/syntactic/: README.md  enum_binary_only_max3.md  enum_classical_binary_max3.md  enum_unary_binary_max5.md  z3_nice_set_17.md  z3_nice_set_29.md  z3_nice_set_32.md  z3_nice_set_33.md  z3_nice_set_34.md
examples/truth_functional/: README.md  enum_binary_only.md  enum_unary_binary_max5.md  z3_nice_set_29.md  z3_nice_set_32.md  z3_nice_set_33.md  z3_nice_set_35.md
glossary/: connectives.md
notebooks/: 00_setup_and_basics.ipynb  01_connectives_intro.ipynb  02_truth_tables.ipynb  03_completeness.ipynb  04_independence.ipynb  05_search_binary.ipynb  06_search_ternary.ipynb  README.md  requirements.txt  utils.py
scripts/: PROOF_STRATEGIES.md  README.md  RECOMMENDED_APPROACH.md  benchmark.py  benchmark_depth.py  compare_z3_vs_enumeration.py  quick_benchmark.py  validate_binary_search.py  validate_ternary_search.py
scripts/benchmarks/: benchmark.py  benchmark_depth.py  quick_benchmark.py
scripts/proofs_enumeration/: README.md  prove_maximum.py
scripts/proofs_z3/: README.md  z3_prove_maximum.py
scripts/validation/: validate_binary_search.py  validate_ternary_search.py
specs/: README.md
specs/plans/: 001_nice_connectives_solver.md  002_comprehensive_refactor_hybrid_z3.md  003_depth_arity_crossover_analysis.md  004_z3_depth_arity_advantage_study.md
specs/reports/: 001_combinatorial_search_strategies.md  002_debug_mixed_arity.md  003_debug_remaining_tests.md  004_comprehensive_project_analysis.md  005_z3_smt_application_analysis.md  006_validation_and_resolution.md  007_performance_analysis.md  (+3 more)
src/: README.md  __init__.py  cli.py  connectives.py  constants.py  independence.py  independence_z3.py  main.py  post_classes.py  search.py
src/commands/: prove.py  (+4 more)
tests/: README.md  conftest.py  test_cli.py  test_commands_benchmark.py  test_commands_prove.py  test_commands_search.py  test_commands_validate.py  test_connectives.py  test_constants.py  test_definability_modes.py  test_depth_crossover.py  test_enumeration_proof.py  test_independence.py  test_independence_z3.py  test_notebooks.py  test_post_classes.py  test_search.py  test_z3_baseline.py  test_z3_proof.py
(+8 files in other folders)
