[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nice-connectives"
version = "1.0.0"
description = "Tools for finding and analyzing nice (complete and independent) connective sets"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Benjamin"}
]
keywords = ["logic", "connectives", "completeness", "independence", "Post's theorem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "z3-solver>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "nbval>=0.10.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
    "pandas>=2.0.0",
]

[project.scripts]
nice-connectives = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.commands"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "notebook: marks notebook validation tests",
    "integration: marks integration tests (end-to-end with real execution)",
]
filterwarnings = [
    # Ignore deprecation warnings from external Z3 library
    "ignore:pkg_resources is deprecated:DeprecationWarning:z3.*",
    "ignore:Deprecated call to.*pkg_resources.*:DeprecationWarning",
]
